--- a/attendance-tracking-tool-app/src/assets/styles/UserProfileCard.css
+++ b/attendance-tracking-tool-app/src/assets/styles/UserProfileCard.css
@@ -1,9 +1,11 @@
 /* this is the css code for styling the student profile card*/
 .user-profile-card {
     border: 1px solid #ddd;
+    margin-right: 20px;
     border-radius: 8px;
     border-color: #333;
     padding: 16px;
+    justify-content: left;
     max-width: 300px;
     background-color: #ffffff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -15,7 +17,7 @@
     color: #333;
   }
   
-  .user-profile-card p {
+  .user-profile-card p { /*styles the text in the student profile*/
     margin: 4px 0;
     font-size: 1rem;
     color: #555;
