--- a/attendance-tracking-tool-app/src/assets/styles/upload.css
+++ b/attendance-tracking-tool-app/src/assets/styles/upload.css
@@ -7,34 +7,17 @@
 .custom-file-upload {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .custom-file-upload:hover {
-    background-color: #45a049;
+    background-color: #218838; /* Darker green on hover */
 }
+
 
 input[type="file"] {
     display: none;
-}
-
-#upload-btn {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #008CBA;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#upload-btn:hover {
-    background-color: #007bb5;
-}
-
-#file-name {
-    margin-top: 10px;
 }
