--- a/attendance-tracking-tool-app/src/assets/styles/upload.css
+++ b/attendance-tracking-tool-app/src/assets/styles/upload.css
@@ -3,7 +3,13 @@
     text-align: center;
     margin-top: 50px;
 }
-
+.profile-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left; /* or space-between, start, etc. */
+    gap: 20px;
+    margin-top: 15px;
+  }
 .custom-file-upload {
     display: inline-block;
     padding: 10px 20px;
