--- a/attendance-tracking-tool-app/src/assets/styles/upload.css
+++ b/attendance-tracking-tool-app/src/assets/styles/upload.css
@@ -15,7 +15,10 @@
     padding: 10px 20px;
     background-color: #28a745;
     color: white;
-    margin-left: 100px;
+    margin-left: 60px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border: none;
     position: absolute;
     top: 100px;        /* Position the button at the top of the page */
     left: 46%;
